# Neon_EXAMPLE_code

./: CMakeLists.txt  README.md
Arithmetic/: CMakeLists.txt  arithmetic.cpp
Compare/: CMakeLists.txt  compare.cpp
Load&Store/: CMakeLists.txt  dataload.cpp  datastore.cpp
Logical/: CMakeLists.txt  logical.cpp
VectorManipulation/: CMakeLists.txt  test  vector_manipulation.cpp  vectormanipulation.cpp
bitManipulation/: CMakeLists.txt  bitwisemanipulation.cpp
